demo3/kubernetes3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080




# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-app
# spec:
#   type: LoadBalancer
#   selector:
#     app: hello-app
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
